bug fix on swagger